welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:1: error: Missing closing brace `}' assumed here
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
^caughtSpeeding:9: error: Missing closing brace `}' assumed here
				else if (speed >=66 && speed <=85){ return 1}
                                ^